--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,11 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.1.3",
     "dotenv": "^10.0.0",
+    "navigate": "^0.3.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -28,6 +29,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "http://localhost:5000",
   "browserslist": {
     "production": [
       ">0.2%",
